--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "parcel build index.html",
+    "build": "parcel build --public-url ./ index.html",
     "dev": "parcel index.html --open"
   },
   "repository": {
@@ -21,5 +21,8 @@
     "jquery": "^3.6.0",
     "qrcode-svg": "^1.1.0",
     "qrious": "^4.0.2"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
